Fix: Collection pages links not working due to incorrect URL

--- a/_layouts/document.html
+++ b/_layouts/document.html
@@ -9,7 +9,7 @@ embed_path: ""
 
 <div class="embed-wrapper">
   <embed
-    src="{{ page.embed_path }}"
+    src="{{ page.embed_path | relative_url }}"
     width="500"
     height="375"
     type="application/pdf"
