--- a/_layouts/document.html
+++ b/_layouts/document.html
@@ -1,11 +1,10 @@
 ---
 layout: default
 embed_path: ""
+images:
 ---
 
-{{ content }}
-
-{% if page.embed_path %}
+{{ content }} {% if page.embed_path %}
 
 <div class="embed-wrapper">
   <embed
@@ -15,6 +14,12 @@ embed_path: ""
     type="application/pdf"
   />
 </div>
+{% endif %} 
+
+{% if page.images %} 
+    {% for image in page.images %}
+        <div class="image-wrapper">
+            <img src="{{ image.path | relative_url }}" alt="{{ image.alt }}" />
+        </div>
+    {% endfor %} 
 {% endif %}
-
-
